new. 단위테스트 및 통합 테스트 추가, 외부 시스템 변경에 대한 유연성 대처 추가 (properties) update. interface 로직 변경 및 default method 구현, interface 구현체 구현, checked exception에 대한 해결(재시도) 추가 및 checked & unchecked exception에 대해 로깅 TODO : default method 간소화 및 fetch method를 default method 로 구현